--- a/views/componentes/Dashboard.handlebars
+++ b/views/componentes/Dashboard.handlebars
@@ -1,1 +1,1 @@
-<h1 style="color:079F5C ;"> Bienvenido al mercado web, seleccione sus productos</h1>
+<h1> Bienvenido al mercado web, seleccione sus productos</h1>
