--- a/views/Inicio.handlebars
+++ b/views/Inicio.handlebars
@@ -1,36 +1,35 @@
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-
-<script src="https://kit.fontawesome.com/936aa708c6.js" crossorigin="anonymous"></script>
-
-<nav class="navbar navbar-light bg-success">
-    <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
-            <i class="fas fa-shopping-cart"></i>
-            Mercado Web
-        </a>
-    </div>
-</nav>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mercado Wev</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/936aa708c6.js" crossorigin="anonymous"></script>
+    <script src="/public/index.js" defer></script>
+</head>
 <body>
-   <div class='d-flex justify-content-center'>
+    <div>
+        {{> Navbar }}
+    </div>
+    <div>
+        {{> Alert}}
+    </div>
+    <div class='center'>
         {{> Dashboard }}
     </div>
-    <div class='d-flex justify-content-center'>
+    <div class='center'>
         {{> Producto}}
     </div>
-</body>
-  
-        <style>
-            * {
-                margin: 0;
-            }
-
-            .contain {
-                background: #;
-                height: 100vh;
-            }
-            body{
-                background: rgb(238,228,174);
-                background: radial-gradient(circle, rgba(238,228,174,1) 0%, rgba(233,148,148,0.5186449579831933) 100%);
-            }
-        </style>
+        {{> Modal}}
+    <div class="center">
+        {{> Boton}}
+    </div>
 <script src="/js/bootstrap.min.js"></script>
+</body>
+</html>
