--- a/views/componentes/Producto.handlebars
+++ b/views/componentes/Producto.handlebars
@@ -1,9 +1,4 @@
- <!-- Button trigger modal -->
-<button type="button" class="btn btn-success " data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Ver compra
-</button>
 <div class='container'>
- 
   <div class='row'>
     {{#each productos}}
       <div class='col-xs-12 col-md-4'>
@@ -15,8 +10,8 @@
           <div class='card-footer'>
             <button
               data-nombre='{{this}}'
-              class='btn btn-primary agregar-carrito d-block mx-auto'>
-            Agergar al Carrito</button>
+              class='btn btn-primary agregar-carrito d-block mx-auto ' >
+            Agregar al Carrito</button>
           </div>
 
         </div>
@@ -24,40 +19,4 @@
     {{/each}}
   </div>
   
-</div>
-<script>
-  const compra =[]; const agregarCarrito =
-  document.querySelectorAll('.agregar-carrito');
-  agregarCarrito.forEach(function(boton){
-  boton.addEventListener('click',function(e){ e.preventDefault(); const nombre =
-  e.target.dataset.nombre; compra.push(nombre); 
-  console.log(compra); }) }) 
-
-</script>
-
- <!-- Button trigger modal -->
-<button type="button" class="btn btn-success " data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Ver compra
-</button>
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Productos del Carrito</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        {{#each compra}}
-        <li>{{compra}}</li>
-        {{/each}}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Comprar</button>
-      </div>
-    </div>
-  </div>
 </div>
